Big Changes: almost of the entity is modified with real world ecommerce project, code is refactored, architecture modified, spring security modified